GNOME Bugzilla – Bug 662763
Bad unref in grl-net
Last modified: 2011-11-03 16:57:53 UTC
Hi The GSimpleAsyncResult used in grl-net-wc is unreffed in its own callback. This is bad, because the g_simple_async_result_complete() function accesses the object after it runs the callback and does not hold its own reference. Attached is a patch to unref correctly.
Created attachment 200020 [details] [review] grl-net: Correctly unref operation async result Correct behaviour is to unref the GSimpleAsyncResult object after the call to g_simple_async_result_complete(). It cannot be done in the async result's callback.
Hi, thanks for the patch. Like the others, we'll be reviewing it as soon as possible.
Review of attachment 200020 [details] [review]: Good catch. Thanks! Perhaps we could simplify the flow is some places later.
I've committed this one (hope that's ok with you)
Created attachment 200536 [details] [review] Patch backported to 0.1.x branch I've updated this patch to apply it as well in 0.1.x branch.
Pushed in 0.1.x branch, thanks