grl-net: Correctly unref operation async result

Correct behaviour is to unref the GSimpleAsyncResult object after the call to
g_simple_async_result_complete(). It cannot be done in the async result's callback.

https://bugzilla.gnome.org/show_bug.cgi?id=662763

Signed-off-by: Simon Pena <spena@igalia.com>